# soft_osd

./: .gitignore  Cargo.toml  README.md  flake.nix  sc.toml  showcase.sh  sosd.example.toml
.github/workflows/: ci.yml  nix-config-gen.yml
crates/config/: Cargo.toml
crates/config/src/: action.rs  battery.rs  lib.rs  types.rs  urgency.rs
crates/raqote_svg/: Cargo.toml
crates/raqote_svg/examples/: simple.rs
crates/raqote_svg/src/: lib.rs  render.rs
crates/services/: Cargo.toml
crates/services/examples/: battery.rs  complete.rs  singletone.rs
crates/services/src/: battery.rs  error.rs  lib.rs  notification.rs  singletone.rs
crates/services/src/battery/: bluez.rs  sys.rs
crates/services/src/notification/: bus.rs  icon.rs
nix/: config.nix  default.nix  hm-module.nix  nixos-module.nix
resources/: README.md  org.sergioribera.sosd.conf  org.sergioribera.sosd.service  rs.sergioribera.sosd.conf  sosd.service
src/: app.rs  buffer.rs  components.rs  config.rs  ipc.rs  main.rs  notification.rs  render.rs  utils.rs  window.rs
src/app/: event_loop.rs  services.rs
src/buffer/: wayland.rs  x11.rs
src/buffer/wayland/: buffer.rs
src/components/: background.rs  icon.rs  slider.rs  text.rs
src/ipc/: notification.rs  sosd.rs
src/utils/: hex_rgb.rs
