[package]
name = "sosd"
description = "Amazing soft OSD for linux"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
strip = true
lto = "thin"
panic = 'abort'
opt-level = 3
codegen-units = 1

[workspace]
members = [ "crates/config","crates/raqote_svg", "crates/services"]

[workspace.dependencies]
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "serde"] }
raqote = { version = "0.8.5", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.42.0", default-features = false, features = ["macros", "rt-multi-thread"] }
zbus = { version = "5.1.0", default-features = false, features = ["tokio"] }

[dependencies]
config = { version = "0.1.0", path = "crates/config" }
cosmic-text = "0.12.1"
image.workspace = true
raqote.workspace = true
smithay-client-toolkit = "0.19.2"
tokio.workspace = true
zbus.workspace = true
serde.workspace = true
services = { version = "0.1.0", path = "crates/services" }
softbuffer = { version = "0.4.6", default-features = false, features = ["x11", "wayland"] }
winit = { version = "0.30.5", git = "https://github.com/SergioRibera/winit", branch = "layer_shell", default-features = false, features = ["x11", "wayland"] }
