[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.1.0", path = "../config" }
image.workspace = true
raqote_svg = { version = "0.1.0", path = "../raqote_svg", features = ["image"] }
serde.workspace = true
tokio.workspace = true
zbus.workspace = true
